fix: Venues list layout bug

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -25,8 +25,13 @@ html, body {
   padding: 0;
 }
 
+body, main {
+  height: 100%;
+}
+
 #map {
-  height: calc(100vh - 110px);
+  /* 100% - Venues List height (113px) */
+  height: calc(100% - 113px);
 }
 
 /* Filterbox */
@@ -57,10 +62,6 @@ html, body {
 }
 
 /* Venue Cards */
-
-#venues-cards {
-  height: 110px;
-}
 
 .mdl-venue-card {
   width: 150px;
